src/css/cooling-center.css
.desc {
  padding: 10px 5px 10px 5px; 
  text-align: left;
  font-size: 18px;
  margin-left: 2px;
  margin-top: -15px;
  border-bottom: 1px solid var(--color-border);
}
.fnd .facility a.btn {
  width: calc(100% - 5px);
}
.facility .icon {
  float: left;
}
.facility .icon, .facility .icon img {
  width: 18px;
  height: 18px;
}
.fnd #banner, .fnd #banner * {
  color: #FBED30;
}
.description {
  background-color: var(--color-medium);
}
.lst-it:nth-child(odd) .dtl .clps .content {
  background-color: var(--color-light)
}
.lst-it:nth-child(even) .dtl .clps .content {
  background-color: var(--color-medium);
}
.btn-sq:hover, .btn-rnd:hover {
  background-color: #0B71D0;
  color: var(--color-light);
}

